fix: shift nav dropdown

--- a/scss/modules/_navbar.scss
+++ b/scss/modules/_navbar.scss
@@ -11,6 +11,6 @@
 }
 
 .dropdown-menu.show {
-  left: -5rem;
+  left: -7rem;
   background-color: #fff;
 }
